crates/supersigil-rust/tests/fixtures/fail/empty_fragment_ref.rs
use supersigil_rust::verifies;

#[verifies("req/auth#")]
#[test]
fn test_empty_fragment() {}

fn main() {}
